Se agregó esqueleto de carrito y detalles del login y register

--- a/site_source/public/css/styles.css
+++ b/site_source/public/css/styles.css
@@ -89,3 +89,32 @@ ul {
     justify-content: space-around;
 }
 
+.producto, .pago{
+    width: 50%;
+}
+
+.producto {
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.general{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.descripcion{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
