--- a/site_source/views/login.html
+++ b/site_source/views/login.html
@@ -29,7 +29,7 @@
             <ul>
                 <li><a href="/register">CREA UNA CUENTA <i class="far fa-id-card"></i></a></li>
                 <li><a href="/login">INGRESAR <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#">MI CARRITO<i class="fas fa-shopping-basket"></i></a></li>
+                <li><a href="/cart">MI CARRITO<i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
         
@@ -51,6 +51,13 @@
     <div class='boton'>
         <label name="boton"></label>
             <button class= "boton" type="submit" name="boton" placeholder="Escribe tu contraseña">ENVIAR
+    </div>
+    <div class='boton'>
+        <label  name="recordarDatos" ></label>
+            <input type="checkbox" name="recordarDatos">Recuerda mis datos la próxima ocasión.
+    </div>
+    <div class = 'boton'>
+    <a href="#">Olvidé mi contraseña</a>
     </div>
 </form>
 
