--- a/site_source/views/register.html
+++ b/site_source/views/register.html
@@ -29,7 +29,7 @@
             <ul>
                 <li><a href="/register">CREA UNA CUENTA <i class="far fa-id-card"></i></a></li>
                 <li><a href="/login">INGRESAR <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#">MI CARRITO<i class="fas fa-shopping-basket"></i></a></li>
+                <li><a href="/cart">MI CARRITO<i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
         
