Se agrego el home parcialmente terminado

--- a/site_source/views/index.ejs
+++ b/site_source/views/index.ejs
@@ -9,18 +9,95 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet"> 
-    <link rel="preload" href="/css/styles.css" as="style">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> 
+    <link rel="preload" href="/css/Styles.css" as="style">
+    <link rel="stylesheet" href="/css/Styles.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav class="navbar">
+            <a href="/">
+                <img class="navbar__logo" src="/images/logo.png" alt="logo DeportShopia">
+            </a>
+            <a class="navbar__link navbar__link--active" href="#">Nuevo!</a>
+            <a class="navbar__link" href="#">Hombre</a>
+            <a class="navbar__link" href="#">Mujer</a>
+            <a class="navbar__link" href="#">Infantil</a>
+            <a class="navbar__link" href="/register">Registrate</a>
+            <form  class="navbar__form" action="" method="post">
+                <input class="navbar__form__text" type="text" name="" id="">
+                <button class="navbar__form__btn"><a href="/cart">C</a></button>
+                <button class="navbar__form__btn"><a href="/login">L</a></button>
+            </form>
+        </nav>
+    </header>
 
-    <main>
-        <h2>Hola como estas</h2>
-    </main>
+    <footer>
+        <div class="newsblock">
+            <div class="newsblock__content">
+                <h3 class="newsblock__content__title">Newsletter</h3>
+                <p class="newsblock__content__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit quas minima facere explicabo corporis amet officia.</p>
+                <button class="newsblock__content__btn">Suscribirme</button>
+            </div>
 
-    <footer></footer>
+        </div>
+        <div class="linksblock">
+            <div class="linksblock__links">
+                <div class="linksblock__links__company">
+                    <h4>Empresa</h4>
+                    <ul>
+                        <li><a href="#">Enlace</a></li>
+                        <li><a href="#">Enlace</a></li>
+                        <li><a href="#">Enlace</a></li>
+                        <li><a href="#">Enlace</a></li>
+                    </ul>
+                </div>
+                <div class="linksblock__links__contact">
+                    <h4>Contacto</h4>
+                    <ul>
+                        <li><a href="#">Enlace</a></li>
+                        <li><a href="#">Enlace</a></li>
+                        <li><a href="#">Enlace</a></li>
+                        <li><a href="#">Enlace</a></li>
+                    </ul>
+                </div>
+                <div class="linksblock__links__about">
+                    <h4>Nosotros</h4>
+                    <ul>
+                        <li><a href="#">Enlace</a></li>
+                        <li><a href="#">Enlace</a></li>
+                        <li><a href="#">Enlace</a></li>
+                        <li><a href="#">Enlace</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="linksblock__icons">
+                <div class="linksblock__icons__social">
+                    <button class="linksblock__icons__social__btn"></button>
+                    <button class="linksblock__icons__social__btn"></button>
+                    <button class="linksblock__icons__social__btn"></button>
+                    <button class="linksblock__icons__social__btn"></button>
+                    <button class="linksblock__icons__social__btn"></button>
+                </div>
+                <div class="linksblock__icons__cert">
+                    <div class="linksblock__icons__cert__logo">LOGO</div>
+                    <div class="linksblock__icons__cert__logo">LOGO</div>
+                    <div class="linksblock__icons__cert__logo">LOGO</div>
+                    <div class="linksblock__icons__cert__logo">LOGO</div>
+                    <div class="linksblock__icons__cert__logo">LOGO</div>
+                    <div class="linksblock__icons__cert__logo">LOGO</div>
+                    <div class="linksblock__icons__cert__logo">LOGO</div>
+                    <div class="linksblock__icons__cert__logo">LOGO</div>
+                    <div class="linksblock__icons__cert__logo">LOGO</div>
+                </div>
 
+            </div>
+
+        </div>
+        <div class="footnoteblock">
+            <p>Horarios de atencion XX:XX</p>
+            <p>Todos los derechos reservados 2022</p>
+        </div>
+    </footer>
 </body>
 </html>
