--- a/site_source/views/register.ejs
+++ b/site_source/views/register.ejs
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
+    <%- include('./partials/head') %>
+<!-- <head>
     <meta charset="UTF-8">
     <title>REGÍSTRATE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">  
-</head>
+</head> -->
 
 <body>
-    <header>
+    <%- include('./partials/header') %>
+    <!-- <header>
         <div class="top-header">
             <div class="logo"> 
                 <img src="images/logo.png" alt="LOGO DEPORTSHOPIA">
@@ -33,7 +35,7 @@
             </ul>
         </nav>
         
-    </header>
+    </header> -->
 
 
     <form action="/" method = "GET">
@@ -81,6 +83,8 @@
                 <button type="reset" name="boton2" >BORRAR FORM
         </div>
     </form>
+
+    <%- include('./partials/footer') %>
 
 </body>
 </html>
