--- a/site_source/views/partials/footer.ejs
+++ b/site_source/views/partials/footer.ejs
@@ -2,8 +2,8 @@
 <footer>
     <div class="newsblock">
         <div class="newsblock__content">
-            <h3 class="newsblock__content__title">Newsletter</h3>
-            <p class="newsblock__content__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit quas minima facere explicabo corporis amet officia.</p>
+            <h3 class="newsblock__content__title margin-zero">Newsletter</h3>
+            <p class="newsblock__content__text margin-zero">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit quas minima facere explicabo corporis amet officia.</p>
             <button class="newsblock__content__btn">Suscribirme</button>
         </div>
 
@@ -47,15 +47,15 @@
                 <button class="linksblock__icons__social__btn"></button>
             </div>
             <div class="linksblock__icons__cert">
-                <div class="linksblock__icons__cert__logo">LOGO</div>
-                <div class="linksblock__icons__cert__logo">LOGO</div>
-                <div class="linksblock__icons__cert__logo">LOGO</div>
-                <div class="linksblock__icons__cert__logo">LOGO</div>
-                <div class="linksblock__icons__cert__logo">LOGO</div>
-                <div class="linksblock__icons__cert__logo">LOGO</div>
-                <div class="linksblock__icons__cert__logo">LOGO</div>
-                <div class="linksblock__icons__cert__logo">LOGO</div>
-                <div class="linksblock__icons__cert__logo">LOGO</div>
+                <div class="linksblock__icons__cert__logo item1">LOGO</div>
+                <div class="linksblock__icons__cert__logo item2">LOGO</div>
+                <div class="linksblock__icons__cert__logo item3">LOGO</div>
+                <div class="linksblock__icons__cert__logo item4">LOGO</div>
+                <div class="linksblock__icons__cert__logo item5">LOGO</div>
+                <div class="linksblock__icons__cert__logo item6">LOGO</div>
+                <div class="linksblock__icons__cert__logo item7">LOGO</div>
+                <div class="linksblock__icons__cert__logo item8">LOGO</div>
+                <div class="linksblock__icons__cert__logo item9">LOGO</div>
             </div>
 
         </div>
