--- a/site_source/views/partials/head.ejs
+++ b/site_source/views/partials/head.ejs
@@ -11,5 +11,5 @@
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> 
     <link rel="preload" href="/css/Styles.css" as="style">
     <link rel="stylesheet" href="/css/Styles.css">
-    <link rel="stylesheet" href="css/styles.css"> 
+    <!-- <link rel="stylesheet" href="css/styles.css">  -->
 </head>
