--- a/site_source/public/css/Styles.css
+++ b/site_source/public/css/Styles.css
@@ -1,15 +1,18 @@
 :root{
-    /* Colores */
+    /* Main Colors */
     --prin:#a15b3d;
     --secon:#b11b23;
     --white:#fff;
     --black:#000;
     --gray: rgb(209, 209, 209);
 
-    /* Fuentes */
+    --aux: rgb(17, 226, 17);
+
+    /* Main Fonts */
     --prin-fnt:'Staatliches', cursive;
 }
-/* Globales */
+
+/* Global Config */
 html{
     box-sizing: border-box;
     font-size: 62.5%;
@@ -42,6 +45,22 @@ button,
 input[type="button"]{
     cursor: pointer;
 }
+ul {
+    padding: 0;
+}
+ul li {
+    list-style-type: none;
+}
+
+/* Single use classes */
+.margin-zero{
+    margin: 0;
+}
+
+/* --------------------------- */
+/* Homepage index.ejs */
+/* --------------------------- */
+
 /* Header */
 header{
     display: flex;
@@ -94,8 +113,17 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem 3rem 3rem 3rem;
+    padding: 2rem 16rem;
     text-align: center;
+    margin-top: 2rem;
+}
+.newsblock__content{
+    width: 100%;
+    height: 20rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 .newsblock__content__btn{
     width: 15rem;
@@ -103,96 +131,217 @@ header{
     color: var(--prin);
     border: .1rem solid var(--prin);
 }
+
 .linksblock{
     display: grid;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(1,1fr);
+    gap: 2rem;
 }
 .linksblock__links{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 1rem;
     padding-left: 16rem;
+    align-self: center;
+    justify-items: center;
 }
 .linksblock__icons{
     display: grid;
     grid-template-columns: repeat(1,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-rows: 7rem 16rem;
     gap: 2rem;
+    align-items: center;
+    padding: 2rem 16rem 3rem 0;
 }
 .linksblock__icons__social{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding-right: 16rem;
 }
 .linksblock__icons__social__btn{
     background-color: var(--gray);
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
+    margin: 0 1rem 0 1rem;
 }
 .linksblock__icons__cert{
     display: grid;
     grid-template-columns: repeat(6,1fr);
     grid-template-rows: repeat(2,1fr);
     gap: 2rem;
+    align-items: center;
+    justify-items: center;
 }
 .linksblock__icons__cert__logo{
     background-color: var(--gray);
     width: 10rem;
     height: 5rem;
 }
-
+.item7{
+    grid-column: 1/3;
+}
+.item8{
+    grid-column: 3/5;
+}
+.item9{
+    grid-column: 5/7;
+}
 .footnoteblock{
     border-top: .1rem solid var(--black);
-    padding: .5rem 16rem .5rem 16rem;
+    padding: 0 16rem 0 16rem;
     display: flex;
     justify-content: space-between;
     text-align: center;
 }
 
-
-/* Extra */
-.contenedor{
+/* Main */
+.container{
     max-width: 120rem;
+    height: auto;
     margin: 0 auto;
 }
-.grid{
+
+
+/* First Section */
+
+.bg{
+    background-image: url(../images/trek.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    width: 100%;
+    height: 45rem;
+}
+.carousel{
+    background-color: rgb(0 0 0 / 65%);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.carousel__images{} 
+.carousel__indicators{}
+.leftarrow{}
+.rightarrow{}
+
+/* Second section */
+.fastnews{
+    margin: 1rem 0;
+    background-color: var(--prin);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.fastnews p{
+    font: var(--prin-fnt);
+}
+
+
+/* Third section */
+.discounts{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.discount{
+    width: 22rem;
+    height: auto;
+    background-color: rgba(230, 99, 99, 0.322);
+    border: .1rem solid red;
+    border-radius: .5rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.discount__logo{}
+.discount__text{}
+
+/* Fourth section */
+.banners{
+    margin: 1rem 0;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 1fr;
+    gap: .5rem;
+}
+.banner{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    /* column-gap: 2rem;
-    row-gap: 2rem; */
-    gap: 2rem;
+    grid-template-rows: 1fr;
+    border: .1rem solid blue;
+    border-radius: .5rem;
 }
-.producto{
+.banner__icon{
+    grid-row: 1/3;
+    text-align: center;
+    margin: auto 0;
+}
+.banner__title{}
+.banner__texto{
+    grid-column: 2/3;
+}
+
+/* Fifth section */
+.catCards{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1rem 0;
+}
+.catCard{
+    border: .1rem solid var(--black);
+    display: grid;
+    grid-template-columns: repeat(2,12rem);
+    grid-template-rows: repeat(6,6rem);
+    gap: .5rem;
+}
+.catCard__image{
+    grid-column: 1/3;
+    grid-row: 1/4;
+}
+.catCard__title{
+    grid-column: 1/3;
+    grid-row: 4/5;
+}
+.catCard__sections{
+    grid-column: 1/2;
+    grid-row: 5/7;
+}
+.catCard__sections__link{}
+.catCard__expand{
+    grid-column: 2/3;
+    grid-row: 5/6;
+}
+
+/* Sixth section */
+.prodsReel{}
+.prodsReel__title{}
+.prodsReel__carousel{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 5rem;
+}
+.product{
     background-color: var(--prin);
     padding: 1rem;
 }
-.producto__nombre{
+.product__im{}
+.product__info{}
+.product__name{
     font-size: 4rem;
 }
-.producto__precio{
+.product__price{
     font-size: 2.8rem;
     color: var(--secon);
 }
-.producto__nombre,.producto__precio{
+.product__name,.product__price{
     font-family: var(--prin-fnt);
     margin: 1rem 0;
     text-align: center;
     line-height: 1.2;
-}
-.grafico{
-    min-height: 30rem;
-    background-repeat: no-repeat;
-    background-size: cover;
-    grid-column: 1/3;
-}
-.grafico--camisas{
-    grid-row: 2 / 3;
-    background-image: url(../images/img_placeholder.jpg);
-}
-.grafico--node{
-    background-image: url(../images/img_placeholder.jpg);
-    grid-row: 8/9;
 }
