--- a/site_source/views/partials/head.ejs
+++ b/site_source/views/partials/head.ejs
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> 
-    <link rel="preload" href="/css/Styles.css" as="style">
-    <link rel="stylesheet" href="/css/Styles.css">
+    <link rel="preload" href="/css/styles2.css" as="style">
+    <link rel="stylesheet" href="/css/styles2.css">
     <!-- <link rel="stylesheet" href="css/styles.css">  -->
 </head>
